# test_slot_detect

./: CMakeLists.txt  README.md  detect.cpp
include/: slot_detect_public.h  slot_type.h  type_def.h
model/: slot_detection_classify.param  sod.param
